--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,9 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# =========================
+# Testing files Papyer
+# =========================
+*.data
+*.options
